# arduino-MockAndTesting

./: README.md  rt_arduino_test.cmake
MockArduino/: Arduino.h  CMakeLists.txt  FakeTiming.h  MockArduino.cpp  RingBuffer.h  Stream.cpp  Stream.h  StreamStdOut.h  Wire.h
